# amoskeag

./: .gitignore  BACKENDS.md  Cargo.toml  Makefile  README.md  amoskeag-rb.gemspec  build.sh  devenv.nix
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
examples/: README.md  backend-comparison.rs  javascript_transpiler_demo.rs
examples/01_hello_world/: README.md  example.amos
examples/02_arithmetic/: README.md  example.amos
examples/03_variables/: README.md  example.amos
examples/04_conditionals/: README.md  example.amos
examples/05_string_operations/: README.md  example.amos
examples/06_array_operations/: README.md  example.amos
examples/07_dictionary_access/: README.md  example.amos
examples/08_symbols/: README.md  example.amos
examples/09_business_rule_simple/: README.md  example.amos
examples/10_business_rule_complex/: README.md  example.amos
examples/11_template_greeting/: README.md  example.amos
examples/12_template_blog_post/: README.md  example.amos
examples/13_spreadsheet_formulas/: README.md  example.amos
examples/14_financial_calculations/: README.md  example.amos
examples/15_pipe_chaining/: README.md  example.amos
examples/16_comparisons/: README.md  example.amos
examples/17_logical_operators/: README.md  example.amos
examples/18_nested_data/: README.md  example.amos
examples/19_array_filtering/: README.md  example.amos
examples/20_string_formatting/: README.md  example.amos
examples/21_number_rounding/: README.md  example.amos
examples/22_date_operations/: README.md  example.amos
examples/23_loan_calculator/: README.md  example.amos
examples/24_discount_calculator/: README.md  example.amos
examples/25_validation_rule/: README.md  example.amos
examples/jit/: basic_arithmetic.rs  cli_usage.md
examples/python-transpiler/: README.md  complex_rule.amoskeag  underwriting_rule.amoskeag
ext/: CHANGELOG.md
ext/amoskeag/: amoskeag_native.h
ext/rubygem/: .gitignore  CHANGELOG.md  Gemfile  README.md  Rakefile  amoskeag-rb.gemspec  devenv.nix
ext/rubygem/amoskeag/: Cargo.toml  amoskeag_native.c  extconf.rb
ext/rubygem/amoskeag/amoskeag/: amoskeag_native.c
ext/rubygem/amoskeag/amoskeag/src/: lib.rs
ext/rubygem/amoskeag/src/: lib.rs
ext/rubygem/examples/: basic_usage.rb
ext/rubygem/lib/: amoskeag-rb.rb
ext/rubygem/lib/amoskeag-rb/: version.rb
ext/rubygem/test/: test_helper.rb
ext/rubygem/test/edge_cases/: defensive_programming_test.rb  error_handling_test.rb
ext/rubygem/test/integration/: business_rules_test.rb
ext/rubygem/test/unit/: compile_test.rb  eval_test.rb  evaluate_test.rb
lib/: amoskeag-rb.rb
lib/amoskeag/: Cargo.toml
lib/amoskeag-javascript-transpiler/: Cargo.toml
lib/amoskeag-javascript-transpiler/src/: lib.rs
lib/amoskeag-lexer/: Cargo.toml
lib/amoskeag-lexer/src/: lib.rs
lib/amoskeag-parser/: Cargo.toml
lib/amoskeag-parser/src/: lib.rs
lib/amoskeag-python-transpiler/: Cargo.toml  README.md
lib/amoskeag-python-transpiler/src/: lib.rs
lib/amoskeag-rb/: version.rb
lib/amoskeag-sast/: Cargo.toml  README.md
lib/amoskeag-sast/src/: algebraic_analysis.rs  constraint_solver.rs  data_flow.rs  error_detection.rs  lib.rs  range_analysis.rs
lib/amoskeag-sast/tests/: integration_test.rs
lib/amoskeag-stdlib-functions/: Cargo.toml
lib/amoskeag-stdlib-functions/src/: collection.rs  date.rs  lib.rs  logic.rs  numeric.rs  string.rs
lib/amoskeag-stdlib-functions/src/numeric/: abs.rs  array_max.rs  array_min.rs  ceil.rs  cumipmt.rs  cumprinc.rs  db.rs  ddb.rs  divided_by.rs  effect.rs  floor.rs  fv.rs  ipmt.rs  irr.rs  log.rs  max.rs  min.rs  minus.rs  mirr.rs  mod.rs  modulo.rs  nominal.rs  nper.rs  npv.rs  plus.rs  pmt.rs  power.rs  ppmt.rs  pv.rs  rate.rs  round.rs  sln.rs  sqrt.rs  times.rs
lib/amoskeag-stdlib-functions/tests/: cumipmt_tests.rs  fv_tests.rs
lib/amoskeag-stdlib-operators/: Cargo.toml
lib/amoskeag-stdlib-operators/src/: lib.rs
lib/amoskeag-transpiler/: Cargo.toml  README.md
lib/amoskeag-transpiler-javascript/: Cargo.toml
lib/amoskeag-transpiler-javascript/src/: lib.rs
lib/amoskeag-transpiler-python/: Cargo.toml  README.md  runtime.py
lib/amoskeag-transpiler-python/src/: lib.rs
lib/amoskeag-transpiler-ruby/: Cargo.toml
lib/amoskeag-transpiler-ruby/src/: lib.rs
lib/amoskeag-transpiler/src/: lib.rs
lib/amoskeag/src/: backend.rs  lib.rs
lib/amoskeag/src/backend/: interpreter.rs
lib/amoskeag/tests/: example_integration_tests.rs
scripts/: build-static.sh  release.sh
