[workspace]
resolver = "2"
members = [
    "lib/amoskeag",
    "lib/amoskeag-lexer",
    "lib/amoskeag-parser",
    "lib/amoskeag-transpiler-python",
    "lib/amoskeag-transpiler-javascript",
    "lib/amoskeag-stdlib-operators",
    "lib/amoskeag-stdlib-functions",
    "lib/amoskeag-transpiler",
    "lib/amoskeag-transpiler-ruby",
    "lib/amoskeag-sast",
    "bin/amoskeag-cli",
    "bin/transpiler-example",
]

[workspace.package]
version = "0.1.2"
edition = "2021"
authors = ["Amoskeag Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/durable-oss/amoskeag"

[workspace.dependencies]
# Parsing
nom = "7.1"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Serialization
serde = "1.0"
serde_json = "1.0"

# Testing
pretty_assertions = "1.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true

# Code coverage configuration for cargo-tarpaulin
[workspace.metadata.tarpaulin]
# Run tests with all features enabled
all-features = true
# Output formats
out = ["Html", "Lcov"]
# Output directory for coverage reports
output-dir = "target/coverage"
# Exclude test files from coverage
exclude-files = ["**/tests/**", "**/test_*.rs"]
# Timeout per test in seconds
timeout = "120s"
# Run in verbose mode
verbose = true
