[package]
name = "amoskeag-parser"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
amoskeag-lexer = { path = "../amoskeag-lexer" }
nom.workspace = true
thiserror.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
