[package]
name = "amoskeag-sast"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
amoskeag-parser = { path = "../amoskeag-parser" }
thiserror.workspace = true
serde = { version = "1.0", features = ["derive"] }
serde_json.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
